# finance-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: commit-msg.sh  install-git-hooks.sh
vibequant/: __init__.py  data_loader.py
vibequant/data/: tickers.json
vibequant/interfaces/: base.py  crypto_interface.py  stock_interface.py
vibequant/plots/: common.py  wdm.py
vibequant/sources/: base.py  coingecko_source.py  yfinance_source.py
vibequant/utils/: api.py  decorator.py  general.py
vibequant/wrappers/: vibes.py
